--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             var n = noty({ text: "Bookmark added successfully", type: 'information', layout: 'bottom', theme: 'defaultTheme'});
                             $(elem).find(".pin-out").removeClass( "pin-out", 2000);
                             var pinindex = $(elem).attr("pinindex", pinindex);
-                            
+
                             setTimeout(function(){n.close(); }, 3000);
                         }
                         else {
@@ -148,51 +148,53 @@
             });
 
             $(function(){
-              var $container = $('.isotope');
-              $container.isotope({
-                itemSelector : '.card',
-                getSortData : {
-                  rating : function( $elem ) {
-                    return $elem.attr('rating');
-                  },
-                  popularity : function( $elem ) {
-                    return $elem.attr('popularity');
-                  },
-                  name : function ( $elem ) {
-                    return $elem.attr('name');
-                  }
-                }
-              });
-              var $optionSets = $('.option-set'),
+                var $container = $('.isotope');
+                $container.isotope({
+                    itemSelector : '.card',
+                    getSortData : {
+                        rating : function( $elem ) {
+                            return parseFloat($elem.attr('rating'));
+                        },
+                        popularity : function( $elem ) {
+                            return parseInt($elem.attr('popularity'));
+                        },
+                        name : function ( $elem ) {
+                            return $elem.attr('name');
+                        }
+                    }
+                });
+
+                var $optionSets = $('.option-set'),
                   $optionLinks = $optionSets.find('a');
 
-              $optionLinks.click(function(){
-                var $this = $(this);
-                // don't proceed if already selected
-                if ( $this.hasClass('selected') ) {
-                  return false;
-                }
-                var $optionSet = $this.parents('.option-set');
-                $optionSet.find('.selected').removeClass('selected');
-                $this.addClass('selected');
+                $optionLinks.click(function(){
+                    var $this = $(this);
+                    // don't proceed if already selected
+                    if ( $this.hasClass('selected') ) {
+                        return false;
+                    }
 
-                // make option object dynamically, i.e. { filter: '.my-filter-class' }
-                var options = {'sortAscending' : false},
-                    key = $optionSet.attr('data-option-key'),
-                    value = $this.attr('data-option-value');
-                // parse 'false' as false boolean
-                value = value === 'false' ? false : value;
-                options[ key ] = value;
-                if ( key === 'layoutMode' && typeof changeLayoutMode === 'function' ) {
-                  // changes in layout modes need extra logic
-                  changeLayoutMode( $this, options )
-                } else {
-                  // otherwise, apply new options
-                  $container.isotope( options );
-                }
+                    var $optionSet = $this.parents('.option-set');
+                    $optionSet.find('.selected').removeClass('selected');
+                    $this.addClass('selected');
 
-                return false;
-              });
+                    // make option object dynamically, i.e. { filter: '.my-filter-class' }
+                    var options = {'sortAscending' : false},
+                        key = $optionSet.attr('data-option-key'),
+                        value = $this.attr('data-option-value');
+                    // parse 'false' as false boolean
+                    value = value === 'false' ? false : value;
+                    options[ key ] = value;
+                    if ( key === 'layoutMode' && typeof changeLayoutMode === 'function' ) {
+                        // changes in layout modes need extra logic
+                        changeLayoutMode( $this, options )
+                    } else {
+                        // otherwise, apply new options
+                        $container.isotope( options );
+                    }
+
+                    return false;
+                });
             });
         </script>
     </body>
