--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <input type="text" class="search-query span3 zip-search" id="locale" placeholder="Enter Zipcode or City..." style="margin-right: 7px;">
                                 <span style="color: #06f; font-size: 20px; padding: 10px 3px; position:relative; top: 3px;">&</span>
                                 <input type="text" id="query" class="search-query span3" placeholder="Enter terms, Ex: food or italian" style="margin-left: 7px; margin-right: 20px;">
-                                <button type="submit" class="btn btn-primary" id="search">Search</button>
+                                <button type="submit" class="btn btn-primary" id="search">Search Yelp</button>
                             </div>
                         </form>
 
