guess I am doing filtering then

--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
                             <li class="dropdown">
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Filter <b class="caret"></b></a>
                                 <ul class="dropdown-menu option-set" id="filter-by" data-option-key="sortBy">
-                                  <li><a href="#filterBy=weight" data-option-value="name">Name</a></li>
-                                  <li><a href="#filterBy=rating" data-option-value="rating">Rating</a></li>
-                                  <li><a href="#filterBy=popularity" data-option-value="popularity">Popularity</a></li>
+                                    <li><a href="#" data-filter="*">Show All</a></li>
+                                    <li><a href="#" id="greenFilter" data-filter=".green">Green Label</a></li>
+                                    <li><a href="#" id="orangeFilter" data-filter=".orange">Orange Label</a></li>
+                                    <li><a href="#" id="purpleFilter" data-filter=".purple">Purple Label</a></li>
+                                    <li><a href="#" id="redFilter" data-filter=".red">Red Label</a></li>
+                                    <li><a href="#" id="blueFilter" data-filter=".blue">Blue Label</a></li>
                                 </ul>
                             </li>
                             <li class="divider-vertical"></li>
