--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
     <body>
 
 
-        <div id="extruderRight" class="a {title:'Results...', url:'extruderRight.html'}"></div>
+        <div id="extruderRight" class="a {title:'Results...'}">
+            <div class="bs-docs-example" id="results_panel">
+
+            <br/><br/>
+            <h4 style="text-align:center;">No Results...</h4>
+
+            </div>
+        </div>
 
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
@@ -37,13 +44,13 @@
                     <div class="nav-collapse collapse">
 
 
-                        <form class="navbar-search pull-right">
+                        <form id="yelp_search_form" class="navbar-search pull-right" onsubmit="return yelpSearchForm()">
                             <div class="input-append">
                                 <a href="#" class="btn btn-info btn-small" style="padding: 7px; margin-left: 7px; position:relative; right: 8px;" rel="tooltip" title="Use my current location"><i class="icon-white icon-screenshot" id="locale_button"></i></a>
                                 <input type="text" class="search-query span3 zip-search" id="locale" placeholder="Enter Zipcode or City..." style="margin-right: 7px;">
                                 <span style="color: #06f; font-size: 20px; padding: 10px 3px; position:relative; top: 3px;">&</span>
                                 <input type="text" id="query" class="search-query span3" placeholder="Enter terms, Ex: food or italian" style="margin-left: 7px; margin-right: 20px;">
-                                <button class="btn btn-primary" id="search">Search Yelp</button>
+                                <button type="submit" class="btn btn-primary" id="search">Search Yelp</button>
                             </div>
                         </form>
 
@@ -119,14 +126,14 @@
                             var lat = parseFloat($(elem).attr("lat"));
                             var lon = parseFloat($(elem).attr("lon"));
                             var pinindex = pin(pinID, mapUnique, lat, lon);
-                            //Todo Check if already pinned before pinning
                             $(".isotope").isotope( 'insert', elem);
                             $(elem).find(".pin-hidden").removeClass("pin-hidden");
                             var n = noty({ text: "Bookmark added successfully", type: 'information', layout: 'bottom', theme: 'defaultTheme'});
                             $(elem).find(".pin-out").removeClass( "pin-out", 2000);
                             var pinindex = $(elem).attr("pinindex", pinindex);
-
                             setTimeout(function(){n.close(); }, 3000);
+                            // $("mediacon" + yelp_id).remove();
+                            // alert("Removed: mediacon" + yelp_id);
                         }
                         else {
                             bootbox.dialog("This business card had already been pinned.", [{
