--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
                             <li class="dropdown">
                                 <a data-toggle="dropdown" class="dropdown-toggle" href="#">Re-Layout <b class="caret"></b></a>
                                     <ul id="layouts" class="dropdown-menu option-set" data-option-key="layoutMode">
-                                      <li><a href="#masonry" data-option-value="masonry" class="selected">masonry</a></li>
-                                      <li><a href="#fitRows" data-option-value="fitRows">fitRows</a></li>
-                                      <li><a href="#cellsByRow" data-option-value="cellsByRow">cellsByRow</a></li>
-                                      <li><a href="#straightDown" data-option-value="straightDown">straightDown</a></li>
-                                      <li><a href="#masonryHorizontal" data-option-value="masonryHorizontal" class="horizontal">masonryHorizontal</a></li>
-                                      <li><a href="#fitColumns" data-option-value="fitColumns" class="horizontal">fitColumns</a></li>
-                                      <li><a href="#cellsByColumn" data-option-value="cellsByColumn" class="horizontal">cellsByColumn</a></li>
-                                      <li><a href="#straightAcross" data-option-value="straightAcross" class="horizontal">straightAcross</a></li>
+                                      <li><a href="#masonry" id="allFilter" data-option-value="masonry" class="selected">masonry</a></li>
+                                      <li><a href="#fitRows" id="allFilter" data-option-value="fitRows">fitRows</a></li>
+                                      <li><a href="#cellsByRow" id="allFilter" data-option-value="cellsByRow">cellsByRow</a></li>
+                                      <li><a href="#straightDown" id="allFilter" data-option-value="straightDown">straightDown</a></li>
+                                      <li><a href="#masonryHorizontal" id="allFilter" data-option-value="masonryHorizontal" class="horizontal">masonryHorizontal</a></li>
+                                      <li><a href="#fitColumns" id="allFilter" data-option-value="fitColumns" class="horizontal">fitColumns</a></li>
+                                      <li><a href="#cellsByColumn" id="allFilter" data-option-value="cellsByColumn" class="horizontal">cellsByColumn</a></li>
+                                      <li><a href="#straightAcross" id="allFilter" data-option-value="straightAcross" class="horizontal">straightAcross</a></li>
                                     </ul>
                             </li>
                             <li class="divider-vertical"></li>
