link to doc on logo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="navbar-inner">
                 <div class="container-fluid">
 
-                    <a style="color:#0088CC;" class="brand" href="/">Good <span style="color: #06f;">Eats</span></a>
+                    <div onClick="helpPrompt()" rel="tooltip" title="Open documentation?"><a style="color:#0088CC;" class="brand" href="/">Good <span style="color: #06f;">Eats</span></a></div>
                     <div class="nav-collapse collapse">
 
 
